--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_launcher_icons: ^0.12.0
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
@@ -34,3 +35,20 @@ flutter:
   uses-material-design: true
   generate: true
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/ToDoLauncher.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/ToDoLauncher.png"
+    background_color: "#FFFFFF"
+    theme_color: "#000000"
+  windows:
+    generate: true
+    image_path: "assets/ToDoLauncher.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/ToDoLauncher.png"
